@@ -2,6 +2,8 @@ package com.school.torconfigtool.controllers;
 
 import com.school.torconfigtool.models.BaseRelayConfig;
 import com.school.torconfigtool.models.GuardRelayConfig;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -12,7 +14,6 @@ import org.springframework.web.bind.annotation.RequestParam;
 import java.io.*;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static com.school.torconfigtool.TorConfigToolApplication.isProgramInstalled;
 
@@ -20,9 +21,13 @@ import static com.school.torconfigtool.TorConfigToolApplication.isProgramInstall
 @RequestMapping("/relay")
 public class RelayController {
 
+    private static final Logger logger = LoggerFactory.getLogger(RelayController.class);
+    private static final String TORRC_DIRECTORY = "torrc" + File.separator + "guard";
+    private static final String TORRC_FILE_PREFIX = "local-torrc-";
+
     @GetMapping
     public String relayConfigurationForm(Model model) {
-        System.out.println("Relay configuration form requested");
+        logger.info("Relay configuration form requested");
         checkRunningRelays();
 
         List<String> availableRelayTypes = determineAvailableRelayTypes();
@@ -45,47 +50,49 @@ public class RelayController {
 
     @PostMapping("/configure")
     public String configureRelay(@RequestParam String relayNickname,
-                                 @RequestParam(required = false) Integer relayBandwidth,
                                  @RequestParam int relayPort,
                                  @RequestParam String relayContact,
                                  @RequestParam int controlPort,
                                  @RequestParam int socksPort,
                                  Model model) {
         try {
-            String torrcFileName = "local-torrc-" + relayNickname;
-            String torrcFilePath = "torrc/guard/" + torrcFileName;
+            String torrcFileName = TORRC_FILE_PREFIX + relayNickname;
+            String torrcFilePath = TORRC_DIRECTORY + File.separator + torrcFileName;
 
-            // Check if a relay with the same nickname already exists
             if (relayExists(relayNickname)) {
                 model.addAttribute("errorMessage", "A relay with the same nickname already exists.");
                 return "relay-config";
             }
 
-            // Check if the ports are available
             if (!portsAreAvailable(relayPort, controlPort, socksPort)) {
                 model.addAttribute("errorMessage", "One or more ports are already in use.");
                 return "relay-config";
             }
 
-            GuardRelayConfig config = new GuardRelayConfig(); // Or BridgeRelayConfig depending on the context
-            config.setNickname(relayNickname);
-            config.setOrPort(String.valueOf(relayPort)); // Assuming the orPort is a String. Convert as necessary
-            config.setContact(relayContact);
-            config.setControlPort(String.valueOf(controlPort));
-            config.setSocksPort(String.valueOf(socksPort));
-            // Set other properties as necessary, for example, bandwidth rate
-
+            GuardRelayConfig config = createRelayConfig(relayNickname, relayPort, relayContact, controlPort, socksPort);
             if (!new File(torrcFilePath).exists()) {
-                createTorrcFile(torrcFilePath, config); // Call the refactored method
+                createTorrcFile(torrcFilePath, config);
             }
 
             model.addAttribute("successMessage", "Tor Relay configured successfully!");
         } catch (Exception e) {
-            e.printStackTrace();
+            logger.error("Error during Tor Relay configuration", e);
             model.addAttribute("errorMessage", "Failed to configure Tor Relay.");
         }
 
         return "relay-config";
+    }
+
+    private GuardRelayConfig createRelayConfig(String relayNickname, int relayPort, String relayContact, int controlPort, int socksPort) {
+        GuardRelayConfig config = new GuardRelayConfig();
+        config.setNickname(relayNickname);
+        config.setOrPort(String.valueOf(relayPort));
+        config.setContact(relayContact);
+        config.setControlPort(String.valueOf(controlPort));
+        config.setSocksPort(String.valueOf(socksPort));
+        // Set other properties as necessary, for example, bandwidth rate
+
+        return config;
     }
 
     public void createTorrcFile(String filePath, BaseRelayConfig config) {
@@ -111,35 +118,48 @@ public class RelayController {
             config.writeSpecificConfig(writer);
 
         } catch (IOException e) {
-            e.printStackTrace();
+            logger.error("Error creating Torrc file", e);
         }
     }
 
 
     private void checkRunningRelays() {
         try {
-            Process process = Runtime.getRuntime().exec("ps aux");
-            InputStream inputStream = process.getInputStream();
-            BufferedReader reader = new BufferedReader(new InputStreamReader(inputStream));
+            ProcessBuilder processBuilder = new ProcessBuilder("ps", "aux");
+            Process process = processBuilder.start();
 
-            List<Integer> runningRelayPIDs = reader.lines().filter(line -> line.contains("tor -f local-torrc-")).map(line -> line.split("\\s+")).filter(parts -> parts.length >= 2).map(parts -> Integer.parseInt(parts[1])).toList();
+            try (InputStreamReader reader = new InputStreamReader(process.getInputStream())) {
+                List<Integer> runningRelayPIDs = new BufferedReader(reader)
+                        .lines()
+                        .filter(line -> line.contains("tor -f local-torrc-"))
+                        .map(line -> line.split("\\s+"))
+                        .filter(parts -> parts.length >= 2)
+                        .map(parts -> Integer.parseInt(parts[1]))
+                        .toList();
 
-            runningRelayPIDs.forEach(pid -> System.out.println("PID: " + pid));
-        } catch (IOException e) {
-            e.printStackTrace();
+                runningRelayPIDs.forEach(pid -> logger.info("PID: {}", pid));
+            }
+
+            int exitCode = process.waitFor();
+            if (exitCode != 0) {
+                // Handle process execution failure
+                logger.error("ps command exited with non-zero status: {}", exitCode);
+            }
+        } catch (IOException | InterruptedException e) {
+            // Handle exceptions
+            logger.error("Error checking running relays", e);
         }
     }
 
 
-    public boolean relayExists(String relayNickname) {
-        String currentDirectory = System.getProperty("user.dir");
-        String torrcDirectory = currentDirectory + File.separator + "torrc" + File.separator + "guard";
+    private boolean relayExists(String relayNickname) {
+        String torrcDirectory = System.getProperty("user.dir") + File.separator + TORRC_DIRECTORY;
 
         File[] torrcFiles = new File(torrcDirectory).listFiles();
         if (torrcFiles != null) {
             for (File file : torrcFiles) {
-                if (file.isFile() && file.getName().startsWith("local-torrc-")) {
-                    String existingNickname = file.getName().substring("local-torrc-".length());
+                if (file.isFile() && file.getName().startsWith(TORRC_FILE_PREFIX)) {
+                    String existingNickname = file.getName().substring(TORRC_FILE_PREFIX.length());
                     if (existingNickname.equals(relayNickname)) {
                         return true;
                     }
@@ -155,6 +175,7 @@ public class RelayController {
         String currentDirectory = System.getProperty("user.dir");
         String torrcDirectory = currentDirectory + File.separator + "torrc" + File.separator + "guard";
 
+        // Check torrc files
         File[] torrcFiles = new File(torrcDirectory).listFiles();
         if (torrcFiles != null) {
             for (File file : torrcFiles) {
@@ -171,37 +192,68 @@ public class RelayController {
                             }
                         }
                     } catch (IOException e) {
-                        e.printStackTrace();
+                        logger.error("Error reading Torrc file", e);
                     }
                 }
             }
         }
 
+        // Check running processes
         try {
-            Process process = Runtime.getRuntime().exec("ps aux");
-            InputStream inputStream = process.getInputStream();
-            BufferedReader reader = new BufferedReader(new InputStreamReader(inputStream));
+            ProcessBuilder psProcessBuilder = new ProcessBuilder("ps", "aux");
+            Process psProcess = psProcessBuilder.start();
 
-            List<Integer> runningRelayPIDs = reader.lines().filter(line -> line.contains("tor -f local-torrc-")).map(line -> line.split("\\s+")).filter(parts -> parts.length >= 2).map(parts -> Integer.parseInt(parts[1])).toList();
+            ProcessBuilder netstatProcessBuilder = new ProcessBuilder("netstat", "-tulpn");
+            Process netstatProcess = netstatProcessBuilder.start();
 
+            // Wait for the processes to complete
+            int psExitCode = psProcess.waitFor();
+            int netstatExitCode = netstatProcess.waitFor();
+
+            if (psExitCode != 0 || netstatExitCode != 0) {
+                logger.error("ps or netstat command exited with non-zero status: ps={}, netstat={}", psExitCode, netstatExitCode);
+                return false; // Consider the ports unavailable in case of a command failure
+            }
+
+            // Read the output of ps command
+            List<Integer> runningRelayPIDs;
+            try (BufferedReader psReader = new BufferedReader(new InputStreamReader(psProcess.getInputStream()))) {
+                runningRelayPIDs = psReader.lines()
+                        .filter(line -> line.contains("tor -f local-torrc-"))
+                        .map(line -> line.split("\\s+"))
+                        .filter(parts -> parts.length >= 2)
+                        .map(parts -> Integer.parseInt(parts[1]))
+                        .toList();
+            }
+
+            // Check ports using netstat for each running process
             for (Integer pid : runningRelayPIDs) {
-                String command = String.format("netstat -tulpn | grep %d", pid);
-                Process netstatProcess = Runtime.getRuntime().exec(command);
-                InputStream netstatInputStream = netstatProcess.getInputStream();
-                BufferedReader netstatReader = new BufferedReader(new InputStreamReader(netstatInputStream));
+                ProcessBuilder netstatForPidProcessBuilder = new ProcessBuilder("netstat", "-tulpn");
+                Process netstatForPidProcess = netstatForPidProcessBuilder.start();
 
-                List<String> netstatOutput = netstatReader.lines().toList();
-                for (String netstatLine : netstatOutput) {
-                    if (netstatLine.contains(String.valueOf(relayPort)) || netstatLine.contains(String.valueOf(controlPort)) || netstatLine.contains(String.valueOf(socksPort))) {
-                        return false;
+                try (BufferedReader netstatReader = new BufferedReader(new InputStreamReader(netstatForPidProcess.getInputStream()))) {
+                    List<String> netstatOutput = netstatReader.lines().toList();
+                    for (String netstatLine : netstatOutput) {
+                        if (netstatLine.contains(String.valueOf(relayPort)) || netstatLine.contains(String.valueOf(controlPort)) || netstatLine.contains(String.valueOf(socksPort))) {
+                            return false;
+                        }
                     }
                 }
+
+                // Wait for the netstat process to complete
+                int netstatForPidExitCode = netstatForPidProcess.waitFor();
+                if (netstatForPidExitCode != 0) {
+                    logger.error("netstat command for PID {} exited with non-zero status: {}", pid, netstatForPidExitCode);
+                    return false; // Consider the ports unavailable in case of a command failure
+                }
             }
-    } catch (IOException e) {
-            throw new RuntimeException(e);
+        } catch (IOException | InterruptedException e) {
+            logger.error("Error checking port availability", e);
+            return false;
         }
 
         return true;
     }
+
 }
 
